--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ title: Home
 
         {% for post in paginator.posts %}
 
-            {% if post.featured !== true %}
+            {% if post.featured != true %}
 
                 {% include postbox.html %}
 
